*   Mail: info@wordrider.net (issue tracker is preffered) *
*   Issue tracker: http://bugtracker.wordrider.net/       *
***********************************************************
Thanks to all individuals who reported bugs.

Legend :
Added - indicates new functionality or new part of distribution
Changed - indicates a change in using/behavior FreeRapid
Fixed - indicates a bug fix

  Fixed : Wrong file is deleted when cancelling a download in some cases,
            see http://bugtracker.wordrider.net/task/1325 and http://wordrider.net/forum/read.php?7,4340

11th July 2010 - FreeRapid Downloader 0.85 Alfa 1
  Added : New action in Remove menu: "Remove Completed Links and Deleted Files"
  Added : New user option: "Slim lines in History dialog"
  Added : Speed (bandwidth) Limiter
  Added : Table column sorting is enabled in the main table by default
  Added : New download state SKIPPED, which is used for files that already exist and were skipped by the user
  Added : Menu item for refreshing proxy list
  Added : New setting for handling plugin updates: "Update and restart automatically if no downloads in progress"
  Added : Improved smart clipboard monitoring detection for URLs like
            http://web.com/vb/redirector.php?url=http%3A%2F%2Frapidshare.com%2Ffiles%2F142676%2la.rar&a45456=asdsd
  Added : plugin API version 0.85
            - support for priorities of each plugin
            - experimental support for RTMP protocol
  Added : Highly improved plugin settings
            - max concurrent (parallel) downloads option per plugin
            - plugin can be disabled for clipboard monitoring                  
  Added : Experimental support for downloading basic RTMP streams.
            This was made possible by Flazr v0.6, which we took and modified slightly to fit our needs.
            Big thanks to the developers of Flazr! Home page: http://www.flazr.com/
  Changed : Faster matching of URLs against plugins